fix z-index of notifications

--- a/source/_patterns/01-molecules/messages/notification.scss
+++ b/source/_patterns/01-molecules/messages/notification.scss
@@ -8,7 +8,6 @@
  ========================================================================== */
 
 .m-notification {
-
   &.fixed {
     position: fixed;
     top: 0;
@@ -32,6 +31,7 @@
     padding: 10px 40px 10px 60px;
     visibility: visible;
     pointer-events: auto;
+    z-index: 1040;
     &:before {
       content: '';
       bottom: 0;
